# GtestExample

./: CMakeLists.txt  README.md
include/gtest_example/: my_lib.h  stack.h
src/: example_exe.cpp  my_lib.cpp
test/: my_lib_test.cpp  stack_test.cpp
